--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <title>ClothAI - Support</title>
     <style>
         :root {
-            --primary-color: #4A90E2;
-            --text-color: #333;
-            --bg-color: #f5f5f5;
+            --primary-color: #6B46C1;
+            --secondary-color: #9F7AEA;
+            --accent-color: #B794F4;
+            --text-color: #2D3748;
+            --bg-color: #FAF5FF;
             --card-bg: #ffffff;
+            --hover-color: #553C9A;
         }
 
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            transition: all 0.3s ease;
         }
 
         body {
@@ -23,10 +27,12 @@
             line-height: 1.6;
             color: var(--text-color);
             background-color: var(--bg-color);
+            background-image: linear-gradient(135deg, #FAF5FF 0%, #E9D8FD 100%);
+            min-height: 100vh;
         }
 
         .container {
-            max-width: 800px;
+            max-width: 900px;
             margin: 0 auto;
             padding: 2rem;
         }
@@ -34,71 +40,164 @@
         header {
             text-align: center;
             margin-bottom: 3rem;
-            padding: 2rem 0;
+            padding: 3rem 0;
             background-color: var(--card-bg);
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            border-radius: 20px;
+            box-shadow: 0 4px 20px rgba(107, 70, 193, 0.15);
+            position: relative;
+            overflow: hidden;
+        }
+
+        header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, var(--primary-color), var(--secondary-color));
         }
 
         h1 {
             color: var(--primary-color);
             margin-bottom: 1rem;
+            font-size: 2.5rem;
+            font-weight: 700;
+            letter-spacing: -0.5px;
         }
 
         .section {
             background-color: var(--card-bg);
-            padding: 2rem;
+            padding: 2.5rem;
             margin-bottom: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            border-radius: 20px;
+            box-shadow: 0 4px 20px rgba(107, 70, 193, 0.1);
+            border: 1px solid rgba(159, 122, 234, 0.1);
+            transform: translateY(0);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .section:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 30px rgba(107, 70, 193, 0.15);
         }
 
         h2 {
             color: var(--primary-color);
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
+            font-size: 1.8rem;
+            position: relative;
+            padding-bottom: 0.5rem;
+        }
+
+        h2::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 60px;
+            height: 3px;
+            background: linear-gradient(90deg, var(--primary-color), var(--secondary-color));
+            border-radius: 3px;
         }
 
         p {
-            margin-bottom: 1rem;
+            margin-bottom: 1.2rem;
+            color: var(--text-color);
+            font-size: 1.1rem;
         }
 
         .contact-info {
             margin-top: 2rem;
             text-align: center;
+            padding: 2rem;
+            background: rgba(107, 70, 193, 0.05);
+            border-radius: 15px;
         }
 
         a {
             color: var(--primary-color);
             text-decoration: none;
+            font-weight: 500;
+            position: relative;
         }
 
         a:hover {
-            text-decoration: underline;
+            color: var(--hover-color);
+        }
+
+        a::after {
+            content: '';
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background: var(--secondary-color);
+            transform: scaleX(0);
+            transition: transform 0.3s ease;
+        }
+
+        a:hover::after {
+            transform: scaleX(1);
         }
 
         .feature-list {
             list-style: none;
-            margin: 1rem 0;
+            margin: 1.5rem 0;
         }
 
         .feature-list li {
-            margin-bottom: 0.5rem;
-            padding-left: 1.5rem;
+            margin-bottom: 1rem;
+            padding-left: 1.8rem;
             position: relative;
         }
 
         .feature-list li::before {
-            content: "•";
-            color: var(--primary-color);
+            content: "→";
+            color: var(--secondary-color);
             position: absolute;
             left: 0;
+            font-weight: bold;
         }
 
         footer {
             text-align: center;
-            margin-top: 3rem;
-            padding: 1rem 0;
-            color: #666;
+            margin-top: 4rem;
+            padding: 2rem 0;
+            color: var(--text-color);
+            border-top: 1px solid rgba(107, 70, 193, 0.1);
+        }
+
+        footer p {
+            margin-bottom: 1rem;
+        }
+
+        footer a {
+            margin: 0 1rem;
+            padding: 0.5rem 0;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 1rem;
+            }
+            
+            header {
+                padding: 2rem 1rem;
+            }
+
+            .section {
+                padding: 1.5rem;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            h2 {
+                font-size: 1.5rem;
+            }
         }
     </style>
 </head>
@@ -137,7 +236,11 @@
         </div>
 
         <footer>
-            <p>© 2025 Clothes AI. All rights reserved.</p>
+            <p> 2025 Clothes AI. All rights reserved.</p>
+            <p>
+                <a href="privacy-policy.pdf">Privacy Policy</a> | 
+                <a href="terms-and-conditions.pdf">Terms & Conditions</a>
+            </p>
         </footer>
     </div>
 </body>
